# gkNextRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.en.md  README.md  archlinux_bootstrap.sh  build_android.bat  build_android.sh  build_linux.sh  build_macos.sh  build_mingw.sh  build_tsc.bat  build_tsc.sh  build_windows.bat  build_windows_magicalego.bat  build_windows_oidn.bat  deploy_android.bat  dist.py  dist_cubeface.py  linux_slangc.sh  package_local.bat  package_magicalego.bat  rebuild_shader_windows.bat  vcpkg_android.bat  vcpkg_android.sh  vcpkg_linux.sh  vcpkg_macos.sh  vcpkg_mingw.sh  vcpkg_windows.bat
src/: AndroidMain.cpp  Application.cpp  Application.hpp  CMakeLists.txt  DesktopMain.cpp  GameActivitySources.cpp  ModelViewController.cpp  ModelViewController.hpp  Options.cpp  Options.hpp  RayTracer.cpp  RayTracer.hpp  SceneList.cpp  SceneList.hpp  TaskCoordinator.cpp  TaskCoordinator.hpp  UserInterface.cpp  UserInterface.hpp  UserSettings.hpp  build.version  main.cpp
src/Application/MagicaLego/: MagicaLegoUserInterface.cpp  MagicaLegoUserInterface.hpp
src/Application/Packager/: PackagerMain.cpp
src/Application/gkNextBenchmark/: BenchMark.cpp  BenchMark.hpp  gkNextBenchmark.cpp  gkNextBenchmark.hpp
src/Application/gkNextRenderer/: gkNextRenderer.cpp  gkNextRenderer.hpp
src/Assets/: Animation.cpp  Animation.hpp  CPUAccelerationStructure.cpp  CPUAccelerationStructure.h  CornellBox.cpp  CornellBox.hpp  Material.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  TextureImage.cpp  TextureImage.hpp  UniformBuffer.cpp  UniformBuffer.hpp  Vertex.hpp
src/Common/: CoreMinimal.hpp
src/Editor/: EditorCommand.hpp  EditorContentBrowser.cpp  EditorGUI.h  EditorInterface.cpp  EditorInterface.hpp  EditorMain.cpp  EditorMain.h  EditorMaterialBrowser.cpp  EditorMaterialEd.cpp  EditorMenubar.cpp  EditorOutliner.cpp  EditorProperties.cpp  EditorUtils.cpp  EditorUtils.h  EditorViewport.cpp  IconsFontAwesome6.h  ims_gui.h  ims_gui_menubar.cpp  ims_gui_output.cpp  ims_gui_properties.cpp  ims_gui_sidebar.cpp  ims_gui_viewport.cpp  ims_utils.cpp  main_window.cpp  main_window.h
src/Editor/Nodes/: NodeMaterial.cpp  NodeMaterial.hpp  NodeSetFloat.cpp  NodeSetFloat.hpp  NodeSetInt.cpp  NodeSetInt.hpp
src/MagicaLego/: MagicaLegoGameInstance.cpp  MagicaLegoGameInstance.hpp  MagicaLegoUserInterface.cpp  MagicaLegoUserInterface.hpp
src/Packager/: PackagerMain.cpp
src/Rendering/: RayTraceBaseRenderer.cpp  RayTraceBaseRenderer.hpp  VulkanBaseRenderer.cpp  VulkanBaseRenderer.hpp
src/Rendering/HardwareTracing/: HardwareTracingPipeline.cpp  HardwareTracingRenderer.cpp  HardwareTracingRenderer.hpp
src/Rendering/HybridDeferred/: HardwareTracingRenderer.hpp
src/Rendering/LegacyDeferred/: SoftwareModernRenderer.hpp
src/Rendering/ModernDeferred/: SoftwareTracingRenderer.hpp
src/Rendering/PathTracing/: PathTracingPipeline.cpp  PathTracingPipeline.hpp  PathTracingRenderer.cpp  PathTracingRenderer.hpp
src/Rendering/PipelineCommon/: CommonComputePipeline.cpp  CommonComputePipeline.hpp
src/Rendering/RayQuery/: PathTracingRenderer.cpp  PathTracingRenderer.hpp
src/Rendering/SoftwareModern/: SoftwareModernPipeline.cpp  SoftwareModernPipeline.hpp  SoftwareModernRenderer.cpp  SoftwareModernRenderer.hpp
src/Rendering/SoftwareTracing/: SoftwareTracingPipeline.cpp  SoftwareTracingPipeline.hpp  SoftwareTracingRenderer.cpp  SoftwareTracingRenderer.hpp
src/Runtime/: Application.cpp  Application.hpp  BenchMark.cpp  BenchMark.hpp  Engine.cpp  Engine.hpp  ModelViewController.cpp  ModelViewController.hpp  NextAnimation.cpp  NextAnimation.h  NextPhysics.cpp  NextPhysics.h  SceneList.cpp  SceneList.hpp  ScreenShot.cpp  ScreenShot.hpp  TaskCoordinator.cpp  TaskCoordinator.hpp  UserInterface.cpp  UserInterface.hpp  UserSettings.hpp
src/Runtime/Platform/: PlatformAndroid.h  PlatformCommon.h  PlatformLinux.h  PlatformWindows.h
src/Typescript/: Engine.d.ts  test.ts  tsconfig.json
src/Utilities/: Console.hpp  Exception.cpp  Exception.hpp  FileHelper.cpp  FileHelper.hpp  ImGui.hpp  Localization.hpp  Math.hpp  StbImage.hpp
src/Vulkan/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  BufferUtil.hpp  CommandPool.cpp  CommandPool.hpp  DebugUtils.cpp  DebugUtils.hpp  DebugUtilsMessenger.cpp  DepthBuffer.cpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorSetManager.cpp  DescriptorSetManager.hpp  DescriptorSets.cpp  DescriptorSets.hpp  Device.cpp  Device.hpp  DeviceMemory.cpp  DeviceMemory.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  ImageMemoryBarrier.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  PipelineLayout.cpp  PipelineLayout.hpp  RenderImage.cpp  RenderImage.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.hpp  (+15 more)
src/Vulkan/HybridDeferred/: HardwareTracingPipeline.cpp  HardwareTracingPipeline.hpp  HardwareTracingRenderer.cpp  HardwareTracingRenderer.hpp  HybridDeferredPipeline.cpp  HybridDeferredPipeline.hpp  HybridDeferredRenderer.cpp  HybridDeferredRenderer.hpp
src/Vulkan/LegacyDeferred/: LegacyDeferredPipeline.cpp  LegacyDeferredPipeline.hpp  LegacyDeferredRenderer.cpp  LegacyDeferredRenderer.hpp  SoftwareModernPipeline.cpp  SoftwareModernRenderer.hpp
src/Vulkan/ModernDeferred/: Application.cpp  Application.hpp  ModernDeferredPipeline.cpp  ModernDeferredPipeline.hpp  ModernDeferredRenderer.cpp  ModernDeferredRenderer.hpp  SoftwareTracingPipeline.cpp  SoftwareTracingRenderer.cpp  SoftwareTracingRenderer.hpp
src/Vulkan/PipelineCommon/: CommonComputePipeline.cpp  CommonComputePipeline.hpp
src/Vulkan/RayQuery/: PathTracingPipeline.cpp  PathTracingRenderer.cpp  PathTracingRenderer.hpp  RayQueryPipeline.cpp  RayQueryPipeline.hpp  RayQueryRenderer.cpp  RayQueryRenderer.hpp
src/Vulkan/RayTrace/: RayTracingPipeline.cpp  RayTracingPipeline.hpp  RayTracingRenderer.cpp  RayTracingRenderer.hpp
src/Vulkan/RayTracing/: AccelerationStructure.cpp  AccelerationStructure.hpp  Application.cpp  Application.hpp  BottomLevelGeometry.cpp  DeviceProcedures.cpp  (+15 more)
(+223 files in other folders)
